--- a/app/src/main/res/layout/message_layout_left.xml
+++ b/app/src/main/res/layout/message_layout_left.xml
@@ -21,13 +21,16 @@
             tools:text="hello! what is your name?"
             android:background="@drawable/message_bg_left"
             android:fontFamily="@font/comixno2_medium"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="@android:color/white"
             android:paddingEnd="16dp"
             android:paddingStart="16dp"
             android:paddingTop="8dp"
             android:paddingBottom="4dp"
             android:layout_marginTop="8dp"
+            android:textIsSelectable="true"
+            android:autoLink="web"
+            android:theme="@style/AppTheme.WhiteAccent"
     />
 
 
