--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3880EC</color>
-    <color name="colorPrimaryDark">#2F69C2</color>
+    <color name="colorPrimaryDark">#3880EC</color>
     <color name="colorAccent">#e6a430</color>
 </resources>
