--- a/app/src/main/res/drawable/white_live_container.xml
+++ b/app/src/main/res/drawable/white_live_container.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@android:color/white"/>
-    <corners android:radius="15dp"/>
+    <stroke android:color="@color/colorPrimary" android:width="4dp"/>
+    <corners android:radius="20dp"/>
 </shape>
