--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -11,45 +11,59 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="300dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/send_btn"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
     />
 
-    <EditText
-            android:id="@+id/write_et"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+    <LinearLayout
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/send_btn"
-            android:background="@drawable/text_sender_bg"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
-            android:padding="8dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:textColorHint="#7EB2F5"
-            android:hint="@string/type_here_chat"
-            android:fontFamily="@font/comixno2_medium"
-            android:inputType="textMultiLine"/>
-    <ImageView
-            android:id="@+id/send_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/send_shape"
-            android:src="@drawable/ic_arrow_back_white_24dp"
-            app:layout_constraintTop_toTopOf="@+id/write_et"
-            app:layout_constraintBottom_toBottomOf="@+id/write_et"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:tooltipText="@string/take_out_frustration"
-    />
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+                android:id="@+id/send_btn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="16dp"
+                android:padding="8dp"
+                android:background="@drawable/send_shape"
+                android:src="@drawable/ic_arrow_back_white_24dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:contentDescription="to info"
+                android:tooltipText="@string/take_out_frustration"
+                />
+
+
+        <EditText
+                android:id="@+id/write_et"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/send_btn"
+                android:background="@drawable/text_sender_bg"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                android:padding="8dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:textColorHint="#7EB2F5"
+                android:hint="@string/type_here_chat"
+                android:fontFamily="@font/comixno2_medium"
+                android:inputType="textMultiLine"/>
+
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
