--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
         android:background="@android:color/white"
         tools:context=".fragments.HistoryFragment">
 
@@ -21,9 +22,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toTopOf="@id/graph_view_fh"
             android:text="@string/define_date_fh"
-            android:background="@drawable/message_bg_left"
+            android:background="@drawable/send_shape"
             android:textColor="@android:color/white"
-            android:textSize="24sp"
+            android:textSize="20sp"
     />
 
     <com.jjoe64.graphview.GraphView
